--- a/Prototype/register.html
+++ b/Prototype/register.html
@@ -13,7 +13,7 @@
       <h8>Advising Pathways</h8>
     </div>
     <div class = "main-page">
-        <img src = "E:\College Files\GT Files\Fall 2021\CS3311&LMC3432\GT Login System\image\sting.jpg" alt = "Gatech sting" id = "sting">
+        <img src = "image\sting.jpg" alt = "Gatech" id = "sting">
         <h1>Create an Advising Pathways account</h1>
       <form>
         <script type = "text/javascript" src = "js/register.js"></script>
