--- a/Prototype/final_page.html
+++ b/Prototype/final_page.html
@@ -13,7 +13,7 @@
       <h8>Advising Pathways</h8>
     </div>
     <div class = "home-page">
-        <img src = "E:\College Files\GT Files\Fall 2021\CS3311&LMC3432\GT Login System\image\sting.jpg" alt = "Gatech sting" id = "sting">
+        <img src = "image\sting.jpg" alt = "Gatech" id = "sting">
         <h1>Login succeeded, welcome to Georgia Tech Advising System! What would you like to do today?</h1>
         <input type = "button" name = "pathway" class = "exploreButton exploreClicked" value = "Explore New Pathway">
         <input type = "button" name = "curriculum" class = "curriculumButton curriculumClicked" value = "New Curriculum Profile">
