--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -18,8 +18,10 @@
         <input type = "button" name = "pathway" class = "exploreButton exploreClicked" value = "Explore New Pathway">
         <input type = "button" name = "curriculum" class = "curriculumButton curriculumClicked" value = "New Curriculum Profile">
         <input type = "button" name = "interests" class = "interestsButton interestsClicked" value = "Explore Interests">
-        <input type = "button" name = "appointment" class = "appointmentButton appointmentClicked" value = "Schedule Advising Appointment">
-        
+        <form action="https://advisor.gatech.edu/" style = "display:inline;">
+            <input type = "submit" name = "appointment" class = "appointmentButton appointmentClicked" value = "Schedule Advising Appointment">
+        </form>
+
         <div class = "forget3">
             <a href="index.html">Log out</a>
         </div>
