--- a/Register/register.html
+++ b/Register/register.html
@@ -13,7 +13,7 @@
       <h8>Advising Pathways</h8>
     </div>
     <div class = "main-page">
-        <img src = "image\sting.jpg" alt = "Gatech" id = "sting">
+        <img src = "sting.jpg" alt = "Gatech" id = "sting">
         <h1>Create an Advising Pathways account</h1>
       <form action="/register" method="post">
         <h2>Username</h2>
